CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(TARGET videotexture)
PROJECT(${TARGET})
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

SET(${TARGET}_HEADERS )
SET(${TARGET}_SOURCES testgl.cpp)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLUT)
FIND_PACKAGE(GLEW)
find_package( OpenCV REQUIRED )

INCLUDE_DIRECTORIES(
    ${GLUT_INCLUDE_DIR}
    ${OPENGL_INCLUDE_DIR}
    ${GLEW_INCLUDE_PATH}
)


ADD_EXECUTABLE(${TARGET}
        ${${TARGET}_SOURCES}
)

TARGET_LINK_LIBRARIES (${TARGET}
    ${GLUT_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLEW_LIBRARY}
    ${OpenCV_LIBS}
)
